--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
