--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.0",
     "react-native-gesture-handler": "^2.23.1",
