--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.16.7",
