--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.76.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.1",
+    "react-native-image-crop-picker": "^0.50.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^3.16.7",
