--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "webpack serve --config webpack.config.js",
-    "web": "webpack serve --config webpack.config.js",
-    "build": "webpack --config webpack.config.js",
+    "start": "react-native start",
+    "web": "react-scripts start",
+    "build": "react-scripts build",
     "lint": "eslint .",
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/drawer": "^7.1.1",
+    "@react-navigation/drawer": "^7.5.3",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.1",
@@ -69,5 +70,17 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
