--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -21,12 +22,14 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@rneui/base": "^0.0.0-edge.2",
     "@rneui/themed": "^0.0.0-edge.2",
+    "axios": "^1.11.0",
     "lucide-react-native": "^0.525.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-dom": "^19.1.0",
     "react-native": "0.76.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.23.1",
     "react-native-image-crop-picker": "^0.50.1",
@@ -38,10 +41,12 @@
     "react-native-screens": "^4.6.0",
     "react-native-svg": "^15.12.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
     "react-redux": "^9.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -53,6 +58,7 @@
     "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
     "@react-native-community/cli-platform-ios": "15.0.0-alpha.2",
     "@react-native/babel-preset": "0.76.0",
+    "@react-native/codegen": "^0.80.2",
     "@react-native/eslint-config": "0.76.0",
     "@react-native/metro-config": "0.76.0",
     "@react-native/typescript-config": "0.76.0",
@@ -63,6 +69,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.3.1",
     "typescript": "5.0.4",
     "webpack": "^5.99.9",
